--- a/files/php.ini
+++ b/files/php.ini
@@ -2,4 +2,8 @@
 
 memory_limit = 1024M
 upload_max_filesize = 6M
+
+apc.shm_size = 128M
+
 opcache.validate_root = 1
+opcache.memory_consumption = 256M
