added memcached, redis and xdebug

--- a/files/php.ini
+++ b/files/php.ini
@@ -8,3 +8,13 @@ apc.shm_size = 128M
 
 opcache.validate_root = 1
 opcache.memory_consumption = 256M
+
+xdebug.remote_enable = ${PHP_XDEBUG}
+xdebug.remote_port = 9000
+xdebug.remote_autostart = ${PHP_XDEBUG}
+xdebug.remote_connect_back = 1
+
+xdebug.profiler_enable = 0
+xdebug.profiler_output_name = xdebug.out.%t
+xdebug.profiler_output_dir = /var/www/html
+xdebug.profiler_enable_trigger = ${PHP_XDEBUG}
