--- a/files/php.ini
+++ b/files/php.ini
@@ -9,10 +9,14 @@ apc.shm_size = 128M
 opcache.validate_root = 1
 opcache.memory_consumption = 256M
 
+xdebug.default_enable = ${PHP_XDEBUG}
 xdebug.remote_enable = ${PHP_XDEBUG}
-xdebug.remote_port = 9000
+xdebug.remote_port = ${PHP_XDEBUG_PORT}
+xdebug.remote_handler = dbgp
+xdebug.remote_connect_back = 0
+xdebug.remote_host = ${PHP_XDEBUG_HOST}
+xdebug.idekey = ${PHP_XDEBUG_IDEKEY}
 xdebug.remote_autostart = ${PHP_XDEBUG}
-xdebug.remote_connect_back = 1
 
 xdebug.profiler_enable = 0
 xdebug.profiler_output_name = xdebug.out.%t
